# spellbook

./: README.md  main.py  pyproject.toml
models/: __init__.py
models/agents/: __init__.py
models/agents/openai/: OpenAIAgent.py  __init__.py
models/environ/: AppEnviron.py  __init__.py
models/react/: __init__.py  outputs.py
prompt/: __init__.py  generator.py
prompt/templates/: __init__.py  react.py
prompts/templates/: default.py  react.py
tools/defaults/: react.py
tools/models/: Tool.py  __init__.py
